# TelegramShop

./: .env.example  .gitignore  CHANGES_SUMMARY.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  add_products.py  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2e6a3837a6e2_add_products_table.py  3aa6e1e4b0b5_initial.py  7b43d703fecb_fix_models.py  a1801ec49c8f_add_products_table.py  ac9a97c5565c_add_users_and_products.py
src/bot/: config.py  i18n.py  main.py
src/bot/handlers/: admin.py  cart.py  order.py  shop.py  user.py
src/bot/keyboards/: __init__.py  cart.py  inline.py  main.py
src/bot/locales/: en.json  ru.json
src/bot/middlewares/: user.py
src/core/: database.py  logging.py
src/models/: __init__.py  base.py  order.py  product.py  user.py
src/repositories/: __init__.py  order.py  product.py  user.py
src/services/: __init__.py  cart.py  order.py  product.py  user.py
