[tool.poetry]
name = "freelance-shop-bot"
version = "0.1.0"
description = "Интернет-магазин Telegram бот для портфолио"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "^0.29"
redis = "^5.0"
structlog = "^24.1"
pydantic-settings = "^2.6"
alembic = "^1.13"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
mypy = "^1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
